tests/samples/expression-invalid-7/error.full.txt
Unexpected "(" on line 2 at index 68.

1|// error: 9()
2|        { (na9me_.a().pm["[]"]()["mop'op"].mm(4.258,'oplm').tty + 9()  + (mmo[]))}
                                                                     ^
3|

File: /mnt/Emile/silassare/blate/src/Exceptions/Traits/BlateExceptionTrait.php
Line: 57
#0 /mnt/Emile/silassare/blate/src/Expressions/Grammar/Parenthesis.php(71): Blate\Exceptions\BlateRuntimeException::withToken()
#1 /mnt/Emile/silassare/blate/src/Expressions/ExpressionParser.php(140): Blate\Expressions\Grammar\Parenthesis->handle()
#2 /mnt/Emile/silassare/blate/src/Expressions/Grammar/Parenthesis.php(40): Blate\Expressions\ExpressionParser->parse()
#3 /mnt/Emile/silassare/blate/src/Expressions/ExpressionParser.php(140): Blate\Expressions\Grammar\Parenthesis->handle()
#4 /mnt/Emile/silassare/blate/src/Expressions/Expression.php(31): Blate\Expressions\ExpressionParser->parse()
#5 /mnt/Emile/silassare/blate/src/Parser.php(142): Blate\Expressions\Expression->get()
#6 /mnt/Emile/silassare/blate/src/Parser.php(94): Blate\Parser->expression()
#7 /mnt/Emile/silassare/blate/src/Blate.php(144): Blate\Parser->parse()
#8 /mnt/Emile/silassare/blate/tests/TemplateSyntaxTest.php(262): Blate\Blate->parse()
#9 /mnt/Emile/silassare/blate/tests/TemplateSyntaxTest.php(109): Blate\Tests\TemplateSyntaxTest->runInvalid()
#10 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestCase.php(1617): Blate\Tests\TemplateSyntaxTest->testExpressionInvalid7()
#11 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestCase.php(1223): PHPUnit\Framework\TestCase->runTest()
#12 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestResult.php(729): PHPUnit\Framework\TestCase->runBare()
#13 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestCase.php(973): PHPUnit\Framework\TestResult->run()
#14 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestSuite.php(685): PHPUnit\Framework\TestCase->run()
#15 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestSuite.php(685): PHPUnit\Framework\TestSuite->run()
#16 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestSuite.php(685): PHPUnit\Framework\TestSuite->run()
#17 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/TextUI/TestRunner.php(651): PHPUnit\Framework\TestSuite->run()
#18 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/TextUI/Command.php(146): PHPUnit\TextUI\TestRunner->run()
#19 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/TextUI/Command.php(99): PHPUnit\TextUI\Command->run()
#20 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/phpunit(107): PHPUnit\TextUI\Command::main()
#21 /mnt/Emile/silassare/blate/vendor/bin/phpunit(123): include('...')
#22 {main}